# ebrain-client

./: ChangeLog  INSTALL  Makefile.in  README  aclocal.m4  config.h.in  config.h.in~  configure  configure.ac  configure.scan  ebp-doxyfile  ebp.conf  ebrainpool.service
Debug/: Makefile
Debug/po/: Makefile
Debug/src/: ebp
Debug/src/.deps/: main.Po
autom4te.cache/: traces.0  traces.1
doc/html/: annotated.html  avahi-discovery_8c.html  avahi-discovery_8h.html  avahi-discovery_8h_source.html  classes.html  ebp_8h.html  files.html  functions.html  globals.html  globals_defs.html  globals_eval.html  globals_func.html  globals_vars.html  main_8c.html  struct__user.html  struct_apps_data.html  utils_8c.html
doc/html/search/: all_61.js  all_62.js  all_63.js  all_69.js  all_6c.js  all_6e.js  all_70.js  all_72.js  all_75.js  classes_61.js  defines_63.js  defines_77.js  enumvalues_6e.js  functions_61.js  functions_62.js  functions_63.js  functions_65.js  functions_66.js  functions_6b.js  functions_6e.js  functions_6f.js  functions_72.js  search.js  typedefs_6e.js  typedefs_75.js  variables_61.js  variables_62.js  variables_63.js  variables_6e.js  variables_72.js  variables_73.js  variables_74.js  variables_75.js  variables_77.js
doc/latex/: avahi-discovery_8c.tex  doxygen.sty  main_8c.tex  refman.tex  struct__user.tex  struct_apps_data.tex  utils_8c.tex
ebp-client/: .anjuta_sym_db.db  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  ebp.conf  libtool
ebp-client/.anjuta/session/: anjuta.session  dock-layout.xml
ebp-client/Debug/: config.h  config.status  libtool
ebp-client/Debug/po/: Makefile.in  POTFILES
ebp-client/Debug/src/: Makefile
ebp-client/Debug/src/.deps/: avahi-discovery.Po  utils.Po
ebp-client/autom4te.cache/: output.0  output.1  output.2  output.5  requests  traces.0  traces.1  traces.2  traces.4  traces.5
ebp-client/doc/html/: ebp_8h_source.html  functions_vars.html  globals_type.html  index.html  struct___launch_app_queue.html  struct___launch_dialog_queue.html  struct__newconndata.html
ebp-client/doc/html/search/: all_64.js  all_65.js  all_67.js  all_73.js  all_76.js  all_77.js  classes_5f.js  enumvalues_75.js  files_61.js  files_65.js  functions_67.js  functions_69.js  functions_6c.js  functions_70.js  functions_73.js  typedefs_6c.js  variables_67.js  variables_69.js  variables_70.js
ebp-client/doc/latex/: annotated.tex  avahi-discovery_8h.tex  ebp_8h.tex  files.tex  struct___launch_app_queue.tex  struct___launch_dialog_queue.tex  struct__newconndata.tex
ebp-client/src/: Makefile  Makefile.am  Makefile.in  avahi-discovery.c  avahi-discovery.h  ebp.conf  ebp.desktop.in  ebp.h  main.c  main.c~  utils.c
ebp-client/src/.deps/: main.Po
ebp-client/src/thriftcomm/: Makefile.am  announcelist_server.cpp
ebp-client/src/thriftcomm/gen-cpp/: announcelist.h  ebp_proto_types.cpp
ebp-client/src/ui/: mainwindow.glade
ebp-olsrd-plugin/: Makefile  README
ebp-olsrd-plugin/ebp/src/: olsr_ebp.d  olsr_ebp.h  olsrd_plugin.d
ebp-olsrd-plugin/src/: olsr_ebp.c  olsr_ebp.h~  olsr_ebp_common.h  olsrd_plugin.c  olsrd_plugin.c~  olsrd_plugin.h  olsrd_plugin.h~
scripts/: connect_fromclient  ssh_config  sshd_config  sshfs_toclient  start_srv
src/: Makefile.in  avahi-discovery.c  ebp.conf  ebp.h  main.c  utils.c
src/thriftcomm/: CppClient.cpp  Makefile.in  Makefile.manual  ebp_proto.thrift  ebpcomm.h
src/thriftcomm/gen-cpp/: announcelist.cpp  announcelist_server.skeleton.cpp  ebp_proto_constants.cpp  ebp_proto_constants.h  ebp_proto_types.h
src/ui/: ebrainpool_ui.glade
